--- a/support/static/ngTemplates/app.inventory.cart.modal.html
+++ b/support/static/ngTemplates/app.inventory.cart.modal.html
@@ -18,20 +18,25 @@
       <tbody>
         <tr style="background-color: #eeeeee;height: 96px;">
           <th>Si.No</th>
-          <th>Product</th>
           <th>Part No</th>
+          <th>Product</th>
           <th>Quantity</th>
           <th></th>
         </tr>
         <tr ng-repeat="v in productsOrdered track by $index">
           <td>{{$index + 1}}</td>
+            <td><input ng-model="v.part_no" uib-typeahead="product as product.part_no for product in change($viewValue) " type="text" class="form-control-pos text-center"></div></td>
+          <!-- <td>{{v.part_no}}</td> -->
           <td>{{v.description_1}}</td>
-          <td>{{v.part_no}}</td>
           <td><input type="number" step=1 class="form-control-pos" ng-model="v.prodQty" ng-init="v.prodQty=1"></td>
           <td>
             <button type="button" class="btn btn-danger btn-sm" ng-click="delete($index)"> <i class="fa fa-trash"></i> </button>
           </td>
         </tr>
+        <tr  >
+          <td><button style="background-color:white;border:none;" ng-click="addTableRow($index)" ><i class="fa fa-plus" style="cursor:pointer"></i></button></td>
+        </tr>
+
       </tbody>
     </table>
   </div>
