--- a/homepage/static/ngTemplates/app.homepage.courses.html
+++ b/homepage/static/ngTemplates/app.homepage.courses.html
@@ -62,23 +62,23 @@
   <div class="container-fluid" style="background-color:#FCC300;min-height:10vh;  position:relative;">
     <div class="container">
       <div class="col-md-2 clickchange" ng-model='books' ng-class="click1" ng-click="clicks(1)">
-        <span><b>01 Books</b></span>
+        <span><b>Books</b></span>
         <div ng-class="class1"></div>
       </div>
       <div class="col-md-2 clickchange" ng-model='videos' ng-class="click2" ng-click="clicks(2)">
-        <span><b>02 Video Course</span>
+        <span><b>Video Course</span>
         <div ng-class="class2"></div>
       </div>
       <div class="col-md-2 clickchange" ng-model='testseries' ng-class="click3" ng-click="clicks(3)">
-        <span><b>03 Test Series</b></span>
+        <span><b>Test Series</b></span>
         <div ng-class="class3"></div>
       </div>
       <div class="col-md-2 clickchange" ng-model='forum' ng-class="click4" ng-click="clicks(4)">
-        <span><b>04 Forum</b></span>
+        <span><b>Forum</b></span>
         <div ng-class="class4"></div>
       </div>
       <div class="col-md-3 clickchange1" ng-model='refbook' ng-class="click5" ng-click="clicks(5)">
-        <span><b>05 Refernce Books</b></span>
+        <span><b>Refernce Books</b></span>
         <div ng-class="class5"></div>
       </div>
     </div>
