--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -8,17 +8,17 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a ng-click="toggleSideMenu()" class="navbar-brand" style="color:white;background:var(--themeMain);cursor:pointer;" >
+      <a ng-click="toggleSideMenu()" class="navbar-brand" style="cursor:pointer;" >
         <i style="margin-top:-10px;" class="fa fa-bars fa-2x"></i>
       </a>
 
       <!-- <a class="navbar-brand" href="/" style="margin-left:50px;">
         <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
       </a> -->
-      <a class="navbar-brand" href="/" style="margin-left:5px;padding-top:5px;margin-top:-18px;color:white;">
+      <a class="navbar-brand" href="/" style="margin-left:5px;padding-top:5px;margin-top:-18px;">
         <h2>{{brandName}}</h2>
       </a>
-      <div class="navbar-brand" style="margin-right:30px;color:white"></div>
+      <div class="navbar-brand" style="margin-right:30px;"></div>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navBar" style="height:50px;">
@@ -29,7 +29,7 @@
 
   		<ul class="nav navbar-nav navbar-right" style="margin-right:20px;height:50px;">
   			<li class="dropdown" style="height:100%;">
-  			  <a class="dropdown-toggle" style="height:50px;color:white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{me.url | getName}}  <span class="glyphicon glyphicon-chevron-down"></span></a>
+  			  <a class="dropdown-toggle" style="height:50px" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{me.url | getName}}  <span class="glyphicon glyphicon-chevron-down"></span></a>
   			  <ul class="dropdown-menu">
     				<li><img class="img-responsive" width="200px" src="/static/images/userIcon.png" ng-src="{{me.profile.displayPicture}}" style="top:-5px; position:relative; width:200px"></li>
     				<li>
@@ -47,7 +47,7 @@
   		</ul>
       <ul class = "nav navbar-nav navbar-right" style="height:5vh;">
         <li class="dropdown" style="height:100%;">
-          <a ng-if="!isCustomer&&showw" class="dropdown-toggle" data-toggle="dropdown" style="width:55px;height:50px;text-align: center;color:white" role="button" aria-haspopup="true" aria-expanded="false">
+          <a ng-if="!isCustomer&&showw" class="dropdown-toggle" data-toggle="dropdown" style="width:55px;height:50px;text-align: center;" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-envelope-o fa-lg"></i>
             <span ng-if="instantMessagesCount > 0" class="label label-success" style="position: absolute;top: 5px;">{{instantMessagesCount}}</span>
           </a>
@@ -64,7 +64,7 @@
           </ul>
         </li>
         <li class="dropdown" style="height:100%;">
-          <a class="dropdown-toggle" style="width:55px;height:50px;text-align: center;color:white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <a class="dropdown-toggle" style="width:55px;height:50px;text-align: center;" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-flag-o fa-lg"></i>
             <span ng-if="notificationsCount > 0" class="label label-warning" style="position: absolute;top: 5px;">{{notificationsCount}}</span>
           </a>
@@ -83,7 +83,7 @@
       </ul> <!-- /. notification icons group -->
       <div ng-if="!isCustomer&&showw" style="position:relative;padding-top:0.5vh;">
         <form  class="navbar-form navbar-right" role="search" style="position:absolute;right:270px;">
-          <i style="color:white;margin-top:.5rem" ng-click="terminal.show = !terminal.show;" class="fa fa-search fa-lg noselect"></i>
+          <i style="margin-top:.5rem" ng-click="terminal.show = !terminal.show;" class="fa fa-search fa-lg noselect"></i>
           <input ng-if="terminal.show" focus-me="terminal.show" type="text" class="form-control animated fadeIn" placeholder="Enter command" ng-enter="parseCommand()" ng-blur="closeTerminal()" ng-model = "terminal.command" style="width:500px;" uib-typeahead="user as getName(user) for user in userSearch($viewValue)">
           <div style="position:absolute;top:45px;background:white;width:87%;left:10%;padding:0px;" ng-if="terminal.showCommandOptions && terminal.show" class="card" >
             <ul class="nav-horizontal" style="background:white;">
