--- a/support/static/ngTemplates/app.customers.form.html
+++ b/support/static/ngTemplates/app.customers.form.html
@@ -1,6 +1,6 @@
-<div class="container-fluid" ng-controller="businessManagement.customers.form">
+<div class="container-fluid" ng-controller="businessManagement.customers.form" style="overflow-x:hidden">
   <div class="col-md-6">
-    <div class="row" style="padding-left:25px;padding-bottom:10px">
+    <div class="row" style="padding-left:25px;padding-bottom:10px;">
       <h3>{{mode=='new'?'Create':'Edit'}} Client</h3>
     </div>
     <div class="form-group">
@@ -72,7 +72,6 @@
       </div>
     </div>
 
-
     <div style="cursor:pointer;margin:20px;" ng-click="companyAdvanceOptions = !companyAdvanceOptions">
       <div class="text-primary">
         <i class="fa fa-lg fa-sort-{{companyAdvanceOptions? 'up':'desc'}}" style="margin-right:20px;"></i> Show Advance Options
@@ -119,9 +118,9 @@
     </div>
     <button type="button" class="btn btn-primary pull-right col-md-3 pull-right" ng-click="saveCompanyDetails()" ng-if="form.pk==none">Save Company Details</button>
   </div>
-  <div class="col-md-6" style="padding-left:50px;font-size:15px;line-height:2;opacity:0.9" ng-if="form.pk">
-    <span class="text-center"><h3>Supports</h3><br></span>
-    <div class="row">
+  <div class="col-md-6" style="padding-left:50px;font-size:14px;line-height:2.1;opacity:0.9" ng-if="form.pk">
+    <!-- <span class="text-center"><h3>Supports</h3><br></span> -->
+    <div class="row" style="padding-top:12px;">
       <div class="col-md-6">
         <div class="form-group">
           <span class="col-md-5"><i class="fa fa-comment-o"></i> &nbsp; <label>Chat</label>&nbsp;</span>
@@ -247,26 +246,26 @@
         </div>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-6">
         <span class="col-md-12"><div class="form-group">
           <div class="row">
-            <div class="col-md-2">
+            <div class="col-md-4">
               <i class="fa fa-user"></i> &nbsp; <label>Name</label>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-8">
               <input class="form-control" type="text" ng-model="cpForm.name">
             </div>
           </div>
         </div></span>
       </div>
       <br>
-      <div class="col-md-12">
+      <div class="col-md-6">
         <span class="col-md-12"><div class="form-group">
           <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
               <i class="fa  fa-picture-o"></i> &nbsp; <label>Picture</label>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-8">
               <input type="file" file-model="cpForm.dp">
             </div>
           </div>
@@ -280,7 +279,7 @@
         </div></span>
       </div>
 
-    </div><br>
+    </div>
     <button type="button" class="btn btn-primary btn-lg col-md-2 col-md-offset-5" ng-click="saveCustomerProfile()">Save</button>
   </div>
 </div>
