--- a/homepage/static/ngTemplates/app.homepage.courses.html
+++ b/homepage/static/ngTemplates/app.homepage.courses.html
@@ -96,33 +96,33 @@
             <div>
               <div class="row " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
                 <div class="col-md-10 col-xs-11  firstchild ">{{a.chapter.one}}</div>
-                <div class="col-md-2 col-xs-1  firstchild text-right">1</div>
+                <div class="col-md-2 col-xs-1  firstchild right_on" >1</div>
               </div>
             </div>
             <div class="row " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
               <div class="col-md-10 col-xs-11">{{a.chapter.two}}</div>
-              <div class="col-md-2 col-xs-1  text-right">2</div>
+              <div class="col-md-2 col-xs-1  right_on">2</div>
             </div>
             <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
               <div class="col-md-10 col-xs-11">{{a.chapter.three}}</div>
-              <div class="col-md-2 col-xs-1 text-right">5</div>
+              <div class="col-md-2 col-xs-1 right_on">5</div>
             </div>
             <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
               <div class="col-md-10 col-xs-11">{{a.chapter.four}}</div>
-              <div class="col-md-2 col-xs-1 text-right">7</div>
+              <div class="col-md-2 col-xs-1 right_on">7</div>
             </div>
             <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
               <div class="col-md-10 col-xs-11">{{a.chapter.five}}</div>
-              <div class="col-md-2 col-xs-1 text-right">10</div>
+              <div class="col-md-2 col-xs-1 right_on">10</div>
             </div>
             <div ng-show="a.view1">
               <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
                 <div class="col-md-10 col-xs-11">{{a.chapter.six}}</div>
-                <div class="col-md-2 col-xs-1 text-right">13</div>
+                <div class="col-md-2 col-xs-1 right_on">13</div>
               </div>
               <div class="row  " ng-class="!$last ? 'contentblock' : 'contentblocklast'">
                 <div class="col-md-10 col-xs-11">{{a.chapter.seven}}</div>
-                <div class="col-md-2 col-xs-1 text-right">15</div>
+                <div class="col-md-2 col-xs-1 right_on">15</div>
               </div>
             </div>
             <div class="text-center">
