--- a/static_shared/ngTemplates/header.html
+++ b/static_shared/ngTemplates/header.html
@@ -16,14 +16,14 @@
       <!-- <a class="navbar-brand" style="margin-left:5px;">
         <img ng-src="{{brandLogo}}" height="40" style="margin-top:-10px;max-width:100px;" />
       </a> -->
-      <div class="navbar-brand" style="color:white;">{{serviceName}}</div>
+      <div class="navbar-brand" style="color:white;cursor:pointer;" ng-click="$state.go('businessManagement')">{{serviceName}}</div>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="navBar" style="height:5vh;background-color: var(--themeMain)">
 
-  		<ul class="nav navbar-nav" style="height:5vh;">
+  		<!-- <ul class="nav navbar-nav" style="height:5vh;">
   			<li style="height:100%;" ng-class="{active: $state.includes(m.name)}" ng-repeat="m in modules" ng-if="m.name.length > 0"><a style="padding-top:1.5vh;color:white" ui-sref="{{m.name}}" ><i class="fa {{m.icon}}"></i> {{m.name | humanize}}</a></li>
-  		</ul>
+  		</ul> -->
 
   		<ul class="nav navbar-nav navbar-right" style="margin-right:20px;height:5vh;">
   			<li class="dropdown" style="height:100%;">
