--- a/homepage/static/ngTemplates/app.homepage.signin.html
+++ b/homepage/static/ngTemplates/app.homepage.signin.html
@@ -6,10 +6,12 @@
     <img src="/static/images/24tut/illustration_svg.png" class="log_img">
   </div>
   <div class="col-md-8 min_height for_mob" style="padding-left:40px;">
-    <img src="/static/images/24tut/black icon_grad.svg" class="modal_logo">
+    <div class="text-center">
+      <img src="/static/images/24tut/black icon_grad.svg" class="modal_logo">
+    </div>
     <h1 style="font-size:1.4em;font-weight:bold;"> Login now to learn LIVE Online from India's best teachers</h1>
-    <div class="col-md-4 hidden-md hidden-lg">
-      <img src="/static/images/24tut/illustration_svg.png" style="width:65%;margin-bottom:17px;margin-left:30px;">
+    <div class="col-md-4 hidden-md hidden-lg text-center">
+      <img src="/static/images/24tut/illustration_svg.png" style="width:50%;margin-bottom:10px;" ng-click="close()">
     </div>
     <div class="container-fluid lo_marg text-center">
       <div class="login_btn goo">
@@ -31,7 +33,7 @@
       </button>
     </div>
   </div>
-  <div class="text-center hidden-md hidden-lg only_mob" ng-click="close()">
+  <div class="text-center hidden-md hidden-lg cancel_btn" ng-click="close()">
     <span>Cancel</span>
   </div>
 </div>
