--- a/homepage/static/ngTemplates/app.homepage.player.html
+++ b/homepage/static/ngTemplates/app.homepage.player.html
@@ -1,6 +1,6 @@
 <div class="container-fluid"style="margin:0px;padding:0px">
 <video id="video1" src="/static/images/24tut/video/24tutors.mp4"  poster="posterimage.jpg" autoplay width="100%" height="100%" loop></video>
-<div class="text-center hidden-md hidden-lg only_mob" ng-click="close()">
+<div class="text-center hidden-md hidden-lg cancel_btn" ng-click="close()">
   <span>close</span>
 </div>
 </div>
