--- a/support/static/ngTemplates/app.inventory.stockcheck.modal.html
+++ b/support/static/ngTemplates/app.inventory.stockcheck.modal.html
@@ -9,9 +9,9 @@
     <th class="text-center">
       Description
     </th>
-    <th class="text-center">
+    <!-- <th class="text-center">
       Price
-    </th>
+    </th> -->
     <th class="text-center">
       Quantity
     </th>
@@ -25,9 +25,9 @@
       <td class="text-center">
         <span>{{s.productDesc}}</span>
       </td>
-      <td class="text-center">
+      <!-- <td class="text-center">
         <span>{{s.totalVal.toFixed(2) }}</span>
-      </td>
+      </td> -->
       <td class="text-center">
         <span>{{s.totalqty}}</span>
       </td>
